--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
   },
   "homepage": "https://github.com/comp426-2022-fall/a03-annabellelj#readme",
   "bin": {
-      "roll-dice": "./bin/cli.js"
+    "roll-dice": "bin/cli.js"
   },
   "dependencies": {
-      "minimist": "^1.2.7"
+    "minimist": "^1.2.7"
+  },
+  "directories": {
+    "lib": "lib"
   }
 }
